#F-157 Fixed Rewrite String.format to .formatted call