@@ -27,7 +27,7 @@ public class SerialServiceTest implements Flow.Subscriber<ByteBuffer> {
     SerialService singleService = new SerialService(115200, EnumSet.of(BytesInterceptor.SerialParams.CLEAR_DTR));
     singleService.subscribe(this);
     singleService.close();
-    Assert.assertTrue(singleService.toString().contains(String.format("%x", singleService.hashCode())), singleService.toString());
+    Assert.assertTrue(singleService.toString().contains("%x".formatted(singleService.hashCode())), singleService.toString());
     Assert.assertFalse(singleService.isOpen());
   }
 
