@@ -24,8 +24,8 @@ public class TetrapolarSystemTest {
 
   @Test(dataProvider = "tetrapolar-systems")
   public void testEquals(TetrapolarSystem system1, TetrapolarSystem system2, boolean equals) {
-    Assert.assertEquals(system1.equals(system2), equals, String.format("%s compared with %s", system1, system2));
-    Assert.assertEquals(system1.hashCode() == system2.hashCode(), equals, String.format("%s compared with %s", system1, system2));
+    Assert.assertEquals(system1.equals(system2), equals, "%s compared with %s".formatted(String.valueOf(system1), system2));
+    Assert.assertEquals(system1.hashCode() == system2.hashCode(), equals, "%s compared with %s".formatted(String.valueOf(system1), system2));
     Assert.assertNotEquals(system1, new Object());
     Assert.assertNotEquals(new Object(), system1);
   }
